Update file structure for scripts

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <title>Spending Checkpoint</title>
     <link rel="icon" href="images/penny-logo-128.png" type="image/png" />
     <link rel="stylesheet" href="popup.css" />
-    <script src="popup.js" defer></script>
+    <script type ="module" src="./scripts/popup.js" defer></script>
   </head>
   <body>
     <h3>Spending Checkpoint</h3>
